<resources>
    <string name="app_name">Uba inventory</string>
    <string name="action_settings">Settings</string>
    <string name="editor_activity_and_nave_title_add_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="users">Users</string>
    <string name="nave_activity_title_Home">Home</string>
    <string name="nave_activity_title_product_list">Product List</string>
    <string name="nave_activity_title_product_category">Products Category</string>
    <string name="nave_activity_title_product_item">Products Item</string>
    <string name="nave_supplier">Suppliers</string>
    <string name="nave_order_product">Orders</string>
    <string name="nave_statistics">Statistics</string>
    <string name="nave_export_data">Export data</string>
    <string name="nave_add_users">Add users to this account</string>
    <string name="nave_manage_users">Manage users</string>
    <string name="empty_view_title_text">Nothing in stock&#8230;</string>
    <string name="empty_view_subtitle_text">Get started by adding a new product</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="unit_price_label">Unit Price :&#160;</string>
    <string name="stock_level_label">Stock Level :&#160;</string>
    <string name="sell_button">Sell</string>
    <string name="image_product">Image of the product</string>
    <string name="Product_name">Name</string>
    <string name="Product_code">Code</string>
    <string name="product_description">Description</string>
    <string name="product_category">Category</string>
    <string name="product_item">Item</string>
    <string name="product_location">Location</string>
    <string name="category_unit_price">Unit Price</string>
    <string name="currency_product_unit_price">ETB&#160;</string>
    <string name="category_stock">Stock</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_description">Product Description</string>
    <string name="hint_product_code">product Code</string>
    <string name="hint_product_category">product category</string>
    <string name="hint_product_item">Product Item</string>
    <string name="hint_product_supplier_name">Supplier Name</string>
    <string name="hint_product_supplier_phone">Supplier Phone</string>
    <string name="hint_product_supplier_city">Supplier City</string>
    <string name="hint_product_supplier_email">Supplier Email</string>
    <string name="hint_product_unit_price">Unit Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="email_subject_prefix">New order for :&#160;</string>
    <string name="order_email_starting_greeting">Dear&#160;</string>
    <string name="order_email_current_stock_statement_part_one">Our current stock level for the product&#160;</string>
    <string name="order_email_current_stock_statement_part_two">&#160;is :&#160;</string>
    <string name="order_email_request_end_greetings">We would like to order new units of this product to increase our stock.\n\n
    Could you please get back to as soon as possible to discuss this order in further details.\n\nBest regards,\n\nYour Client</string>
    <string name="order_email_jump_line">\n\n</string>
    <string name="order_email_comma">,</string>
    <string name="order_email_point">.</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all_products_dialog_msg">Delete all products?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="category_insert_category_successful">Category saved successfully</string>
    <string name="supplier_insert_supplier_successful">Supplier saved successfully</string>
    <string name="editor_update_product_successful">Product updated successfully</string>
    <string name="editor_delete_product_successful">Product deleted successfully</string>
    <string name="catalog_sell_product_item_successful">One unit has been sold</string>
    <string name="catalog_delete_all_products_successful">All products deleted</string>
    <string name="catalog_products_table_is_empty">The products database is empty !</string>
    <string name="editor_product_requires_name">Product requires a name !</string>
    <string name="category_category_requires_name">Category requires a name !</string>
    <string name="editor_product_requires_supplier_name">Product requires a supplier name !</string>
    <string name="editor_product_requires_supplier_email">Product requires a supplier\'s email address !</string>
    <string name="editor_product_invalid_supplier_email">The supplier\'s email address is not valid !</string>
    <string name="editor_product_requires_price">Product requires a price !</string>
    <string name="editor_product_requires_positive_price">Product requires a positive price !</string>
    <string name="editor_product_requires_positive_stock_level">Product requires a positive stock level !</string>
    <string name="editor_product_requires_image">Product requires an image !</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="category_insert_category_failed">Error with saving category</string>
    <string name="supplier_insert_supplier_failed">Error with saving supplier</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_category_failed">Error with updating category</string>
    <string name="editor_update_supplier_failed">Error with updating supplier</string>
    <string name="catalog_sell_product_item_failed">Error with selling product\'s item</string>
    <string name="catalog_sell_product_item_failed_stock_empty">Stock for this product is empty !</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="catalog_delete_all_products_failed">Error with deleting the products</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_category">Category List</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">uba.uba@inventory.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_supplier">List of Supplier</string>
</resources>