<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    >


    <!-- supplier name  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/hint_product_supplier_name"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingStart="4dp"
            android:orientation="vertical"
            android:paddingLeft="4dp">


            Supplier's Email field
            <EditText
                android:id="@+id/edit_product_supplier_name"
                android:hint="@string/hint_product_supplier_name"
                android:inputType="textEmailAddress"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- Email category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/hint_product_supplier_email"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingStart="4dp"
            android:orientation="vertical"
            android:paddingLeft="4dp">


            <!-- Supplier's Email field -->
            <EditText
                android:id="@+id/edit_product_supplier_email"
                android:hint="@string/hint_product_supplier_email"
                android:inputType="textEmailAddress"
                style="@style/EditorFieldStyle" />


        </LinearLayout>
    </LinearLayout>

    <!-- phone category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/hint_product_supplier_phone"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingStart="4dp"
            android:orientation="vertical"
            android:paddingLeft="4dp">


            <!-- Supplier's Email field -->
            <EditText
                android:id="@+id/product_supplier_phone"
                android:hint="@string/hint_product_supplier_phone"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />


        </LinearLayout>
    </LinearLayout>

    <!-- supplier city  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/hint_product_supplier_city"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingStart="4dp"
            android:orientation="vertical"
            android:paddingLeft="4dp">


            <!--Supplier's city field-->
            <EditText
                android:id="@+id/product_supplier_city"
                android:hint="@string/hint_product_supplier_city"
                android:inputType="text"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>